[package]
authors = ["sunli <scott_s829@163.com>"]
categories = ["network-programming", "asynchronous"]
description = "async-graphql for axum"
documentation = "https://docs.rs/async-graphql-axum/"
edition = "2021"
homepage = "https://github.com/async-graphql/async-graphql"
keywords = ["futures", "async", "graphql", "axum"]
license = "MIT OR Apache-2.0"
name = "async-graphql-axum-mirror"
repository = "https://github.com/async-graphql/async-graphql"
version = "7.0.13"

[dependencies]
async-graphql = {version="^7"}

bytes = { version = "1.6.0", features = ["serde"] }
futures-util = { version = "0.3.30", default-features = false }
serde_json = "1.0.115"
tokio = { version = "1.36.0", features = ["time"] }
tokio-util = {version = "0.7.10", default-features = false, features = [
    "io",
    "compat",
] }
tokio-stream = "0.1.15"
tower-service = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
axum = { version = "0.8.1", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = { version = "0.8.1", features = ["ws"] }
